--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,6 @@ nav a {
     font-weight: 300;
     font-family: 'Futura', sans-serif;
     font-size: 11px;
-    letter-spacing: 2px;
     text-transform: uppercase;
     transition: color 0.3s ease;
     padding: 5px;
@@ -141,10 +140,13 @@ nav li:hover > a {
 }
 
 .menu {
-    
+    color: white;
     opacity: 0;
     transition: opacity 2s ease;
-    
+    font-family: 'Futura', sans-serif;  
+    font-size: 11px;        
+    font-weight: 100;   
+    letter-spacing: 2px;
 }
 
 .show-menu {
