--- a/contacto.css
+++ b/contacto.css
@@ -158,4 +158,75 @@ nav li:hover > a {
     opacity: 1;
 }
 
+body{
+    margin:0;
+    overflow-x:hidden;
+    }
+    
+.footer {
+    background:#000;
+    padding:30px 0px;
+    font-family: 'Futura', sans-serif;
+    text-align:center;
+    opacity: 0;
+    transition: opacity 4s ease;
+}
+
+.footer.fade-in {
+    opacity: 1;
+}
+
+.footer .row{
+    width:100%;
+    margin:1% 0%;
+    padding:0.6% 0%;
+    color: #ffffff;
+    font-size:.9em;
+    text-align: center;
+    }
+    
+.footer .row a{
+    text-decoration:none;
+    color:#ffffff;
+    transition:0.5s;
+    }
+    
+.footer .row a:hover{
+    color:#808080;
+    }
+    
+.footer .row ul{
+    width:100%;
+    padding: 0;
+    margin: 0;
+    }
+    
+.footer .row ul li{
+    display:inline-block;
+    margin:0px 30px;
+    }
+    
+.footer .row a i{
+    font-size:1.2em;
+    margin:0% 1%;
+    }
+    
+@media (max-width:720px){
+    .footer{
+    text-align:left;
+    padding:5%;
+    }
+    .footer .row ul li{
+    display:block;
+    margin:10px 0px;
+    text-align:left;
+    }
+    .footer .row a i{
+    margin:0% 3%;
+    }
+}
+
+
+
+
 
