--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,20 @@
 
 body {
     font-family: 'Futura', sans-serif;
-    background-color: #000000;
+    background: linear-gradient(45deg, #000000, #161616, #0f0f0f, #000000);
+    background-size: 400% 400%;
+    animation: gradient 5s ease infinite;
     margin: 0;
     padding: 20px;
+}
+
+@keyframes gradient {
+    0% { 
+        background-position: 0% 50%; }
+    50% { 
+        background-position: 100% 50%; }
+    100% {
+        background-position: 0% 50%; }
 }
 
 header {
@@ -20,7 +31,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #000000;
     color: white;
     text-align: center;
 }
@@ -112,7 +122,6 @@ nav li:hover > a {
 }
 
 .hero {
-    background-color: #000000;
     height: 400px;
     display: flex;
     justify-content: flex-end;
@@ -122,23 +131,23 @@ nav li:hover > a {
 }
 
 .hero-logo {
-    height: 140%;
+    height: 150%;
     margin-right: 400px;
     margin-top: 240px;
 }
 
 .hero-text {
-    color: white; /* Color del texto */
-    font-family: 'Futura', sans-serif; /* Fuente Futura */
+    color: white;  
+    font-family: 'Futura', sans-serif; 
     font-stretch: expanded;
-    font-size: 24px; /* Tamaño de letra, ajusta según sea necesario */
-    font-weight: 300;
-    letter-spacing: 2px;
-    text-transform: uppercase; /* Convertir a mayúsculas */
-    position: absolute; /* Posicionar el texto */
-    right: 610px; /* Espaciado desde el lado derecho */
-    bottom: 100px; /* Espaciado desde la parte inferior */
-    text-align: right; /* Justificar a la derecha */
+    font-size: 18px;  
+    font-weight: 500;
+    letter-spacing: 4px;
+    text-transform: uppercase;  
+    position: absolute;  
+    right: 620px;  
+    bottom: 120px;  
+    text-align: right; 
 }
 .show-hero {
     opacity: 1;
