--- a/contacto.css
+++ b/contacto.css
@@ -170,13 +170,27 @@ body{
     align-items: center;
     min-height: 80vh;
     padding: 0px;
-    margin-top: -520px;
+    margin-top: -500px;
+    margin-bottom: 0px;
+    gap: 20px;
+
+}
+
+.info-box {
+    flex: 1;
+    font-family: 'Futura', sans-serif;
+    font-size: 14px;
+    font-weight: 80;
+    color: white;
+    background-color: #000000;
+    padding: 120px;
+    
 }
 
 .contact-form {
     background: #000000;
-    padding: 30px;
-    width: 100%;
+    padding: 40px;
+    width: 80%;
     max-width: 600px;
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -264,14 +278,19 @@ body{
     }
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
 .footer {
     background:#000;
-    padding:30px 0px;
     font-family: 'Futura', sans-serif;
     text-align:center;
     opacity: 0;
     transition: opacity 4s ease;
-    margin-top: -100px;
+    margin-top: -130px;
+    padding: 10px 0px;
 }
 
 .footer.fade-in {
@@ -300,7 +319,7 @@ body{
 .footer .row ul{
     width:100%;
     padding: 0;
-    margin: 0;
+    margin-top: 20px;
     }
     
 .footer .row ul li{
@@ -320,7 +339,7 @@ body{
     }
     .footer .row ul li{
     display:block;
-    margin:10px 0px;
+    margin:5px 0px;
     text-align:left;
     }
     .footer .row a i{
