--- a/en-comun.css
+++ b/en-comun.css
@@ -82,7 +82,7 @@
     line-height: 1.4;
 }
 
-/* Estilos para el modal */
+
 .modal {
     display: none;
     position: fixed;
@@ -99,7 +99,7 @@
     width: 90%;
     max-width: 800px;
     margin: 50px auto;
-    padding-top: 56.25%; /* Aspect ratio 16:9 */
+    padding-top: 56.25%;
 }
 
 .modal iframe {
@@ -124,7 +124,7 @@
     color: #808080;
 }
 
-/* Responsive */
+
 @media (max-width: 768px) {
     .video-grid {
         grid-template-columns: repeat(2, 1fr);
