--- a/styles.css
+++ b/styles.css
@@ -167,4 +167,34 @@ nav li:hover > a {
     opacity: 1;
 }
 
+ 
+.logo-container {
+    position: relative;  
+    display: inline-block;  
+}
+
+ 
+.tooltip {
+    visibility: hidden;  
+    width: 120px;  
+    background-color: black;  
+    color: #fff;  
+    text-align: center;  
+    border-radius: 5px;  
+    padding: 5px;  
+    position: absolute;  
+    z-index: 1;  
+    bottom: -125%;  
+    left: 5%;  
+    margin-left: -60px;  
+    opacity: 0;  
+    transition: opacity 0.3s;  
+}
+
+ 
+.logo-container:hover .tooltip {
+    visibility: visible;  
+    opacity: 1;  
+}
+
 
