--- a/contacto.css
+++ b/contacto.css
@@ -32,6 +32,15 @@ body {
     margin-top: 240px;
 }
 
+.logo1 {
+    width: 40%;
+    margin-top: -250px;
+    display: block;
+    margin-left: auto;
+    margin-right: -30px;
+
+}
+
 .hero-text {
     color: white; 
     font-family: 'Futura', sans-serif; 
@@ -63,7 +72,7 @@ body {
     opacity: 1;
 }
 
-body{
+body {
     margin:0;
     overflow-x:hidden;
     }
@@ -86,10 +95,25 @@ body{
     font-family: 'Futura', sans-serif;
     font-size: 14px;
     font-weight: 80;
+    margin-top: 200px;
+    margin-right: 100px;
     color: white;
     background-color: #000000;
     padding: 120px;
-    
+    text-align: center;
+}
+.info-title{
+    font-size: 20px;
+    margin-bottom: 42px;
+    margin-right: -320px;
+}
+
+.info-text{
+    font-size: 14px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+    margin-right: 58px;
+    text-align: right;
 }
 
 .contact-form {
