--- a/equipo.css
+++ b/equipo.css
@@ -165,10 +165,11 @@ nav li:hover > a {
 }
 
 .filosofia-container {
-    position: center;
-    width: 40%;
+    position: left;
     margin-top: 200px;
-    margin-left: 30%;
+    padding-left: 420px;
+    padding-right: 420px;
+    
 
 }
 
@@ -183,9 +184,11 @@ h2 {
 h1 {
     text-align: center;
     font-family: 'Futura', sans-serif;
-    font-size: 26px;
-    color: white;
-    padding: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    text-align: right;
+    padding-right: 420px;
 }
 
 p {
@@ -193,5 +196,6 @@ p {
     font-family: 'Futura', sans-serif;
     color: white;
     font-size: 14px;
+    
 }
 
